--- a/index.html
+++ b/index.html
@@ -22,19 +22,25 @@
       </div>
       <div class="buttons">
         <div class="paper-scissors">
-          <div class="papper">
-            <img src="./icons/icon-paper.svg" alt="" srcset="" />
+          <div id="paper" class="papper">
+            <img class="papper" src="./icons/icon-paper.svg" alt="" srcset="" />
           </div>
-          <div class="scissor">
-            <img src="./icons/icon-scissors.svg" alt="" srcset="" />
+          <div id="scissor" class="scissor">
+            <img
+              class="scissor"
+              src="./icons/icon-scissors.svg"
+              alt=""
+              srcset=""
+            />
           </div>
         </div>
-        <div class="rock">
-          <div class="rock">
-            <img src="./icons/icon-rock.svg" alt="" srcset="" />
+        <div class="rock-container">
+          <div id="rock" class="rock">
+            <img class="rock" src="./icons/icon-rock.svg" alt="" srcset="" />
           </div>
         </div>
       </div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
